--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,15 +3,23 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [{
+        "name": "Launch CSE Motors",
+        "program": "${workspaceFolder}/server.js",
+        "request": "launch",
+        "skipFiles": [
+            "<node_internals>/**"
+        ],
+        "type": "node"
+    },
         {
-            "name": "Launch CSE Motors",
-            "program": "${workspaceFolder}/server.js",
+            "type": "node",
             "request": "launch",
+            "name": "Launch Program",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "type": "node"
+            "program": "${workspaceFolder}\\server.js"
         }
     ]
 }
